solutions/guardrails-policies/04-enterprise-monitoring-accounts/template.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: enterprisemonitoringaccounts
  annotations:
    description: Create role-based account to enable enterprise monitoring and visibility.
    reference: https://github.com/canada-ca/cloud-guardrails/blob/master/EN/04_Enterprise-Monitoring-Accounts.md
spec:
  crd:
    spec:
      names:
        kind: EnterpriseMonitoringAccounts
      validation:
        openAPIV3Schema:
          type: object
          properties:
            rolename:
              description: "Name of Enterprise Monitoring Role"
              type: string
              # requiredPermissions:
              #   description: "List of Required Permissions"
              #   type: array
              #   items:
              #     type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |-
        package enterprisemonitoringaccounts
        identical(obj, review) {
          obj.metadata.name == input.parameters.rolename
        }
        violation[{"msg":msg}] {
          input.review.kind.kind == "IAMCustomRole"
          other := data.inventory.namespace[_][otherapis]["IAMCustomRole"][name]
          not identical(other, input.review)
          msg := sprintf("Guardrail # 4: The role '%s' does not exist and is required", [input.parameters.rolename])
        }
