solutions/guardrails-policies/04-enterprise-monitoring-accounts/tests/test-inventory.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: iam.cnrm.cloud.google.com/v1beta1
kind: IAMCustomRole
metadata:
  annotations:
    config.kubernetes.io/local-config: 'true'
  name: SSC-CloudBrokers
  namespace: test
spec:
  title: Example Project-Level Custom Role
  description: This role only contains two permissions - publish and update
  permissions:
    - pubsub.topics.publish
    - pubsub.topics.update
  stage: GA
